--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "antd": "^5.23.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.3",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
